content added in the project section and skills

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-<link rel="stylesheet" href="../styles/style.css">
-<link rel="stylesheet" href="../styles/aboutme.css">
-<link rel="stylesheet" href="../styles/annimations.css">
-<link rel="stylesheet" href="../styles/projects.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-<script src="https://use.fontawesome.com/9c02f0a892.js"></script>
-<script src="https://kit.fontawesome.com/e9c1d6f30e.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/aboutme.css">
+    <link rel="stylesheet" href="../styles/annimations.css">
+    <link rel="stylesheet" href="../styles/projects.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/9c02f0a892.js"></script>
+    <script src="https://kit.fontawesome.com/e9c1d6f30e.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
    
     <div class="navbar-container">
         <span class="logo">Ayush</span>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="front-page-right">
-            <img class="ayush" src="../Images/ayush.jpeg">  
+            <img class="ayush" src="../Images/ayush.jpeg" alt="profile-name">  
         </div>
 
         <div class="social-media">
@@ -115,10 +115,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+       I have gained a lot of experience in this field in the last couple years and I like to play with javascript to make cool projects.
             </div>
 
 
@@ -136,10 +133,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+              I have 5 stars in language prociency (python) on Hackerrank and I have been making use of python in multiple domains such as backend web-developement and in Machine learning as well.
             </div>
 
 
@@ -157,10 +151,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+             Made multiple project using Bootstrap4 and I'm personally a huge fan of this framework mainly due to the huge amount of redundancy and time count.
             </div>
 
 
@@ -178,10 +169,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+            This is where I used my python skills to gain another Web-development back-end skills. I made social media on my own using flask and intergrated them with databases.
                 </div>
 
 
@@ -211,10 +199,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+               In this tenure, I learned to work in team and won first prize in ninjathon. Here, I had to come up with innovative approaches to market coding Ninja's event. Also, I have been in the quora team of Coding Ninja.
             </div>
 
 
@@ -232,10 +217,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+              We had to make an interactive Website on Covid-19 in this lockdown and came first among 350 campus Ninja across India.
             </div>
 
 
@@ -253,10 +235,7 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+              Competitive Competition in first year of engineering. Solved 3/5 in the contest to secure top performer rank.
             </div>
 
 
@@ -274,10 +253,8 @@
 
 
             <div class="css-content">
-                If you want apply multiple transformations to an 
-                element, be careful about the order in which you
-                 specify your transformations. For example, if you rotate before translating, the
-                 translation will be along the new axis of rotation!
+               Have 5 star in both python as well as in problem solving skills on Hackerrank. 
+
             </div>
 
 
@@ -300,7 +277,7 @@
         
         <div class="flip-card">
             
-         <div class="flip-card-inner">
+           <div class="flip-card-inner">
 
 
                         <div class="flip-card-front">
@@ -313,7 +290,7 @@
                                 <p class="sub-heading"> Hover here to see the project and source code! </p> 
                         </div>
                         
-                        </div>
+            </div>
 
 
                                 <div class="flip-card-back">
@@ -325,7 +302,7 @@
                                         target="_blank">Click here for live project</a></p>
 
                                 </div>
-         </div>
+          </div>
         </div>
         
 
