--- a/styles/annimations.css
+++ b/styles/annimations.css
@@ -1,16 +1,107 @@
+
 .aboutme ::before{
-    color:white;
-    content: "I'm a Web Developer!";
-    display: inline-block;
-    font-size:30px;
-    animation-name: head;
-    animation-duration:16s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    z-index:0;
+  color:white;
+  content: "I'm a Web Developer.";
+  display: inline-block;
+  animation:heady 25s steps(20);
+  overflow:hidden;
+  white-space:nowrap;
+  border-right: 4px solid black;
+  width: 20ch;
+  font-size:20px;
+  animation-iteration-count: infinite;
+
+}         
+
+
+@keyframes heady {
+  0%{
+      width:0ch;
+
+  }
+  10%{
+    width:18ch;
+  }
+
+  15%{
+    width:18ch;
+  }
+  
+
+  20%{
+    width:4ch;
+    
+  }
+
+  23%{
+    width:4ch;
+    
+  }
+
+  33%{
+  
+    width:26ch;
+   
+  }
+
+  40%{
+    content:"I'm a Competitive Programmar.";
+    width:26ch;
+   
+  }
+
+  
+  47%{
+   
+    width:4ch;
+  }
+
+  50%{
+    width:4ch;
+   
+  }
+
+  60%{
+    width:27ch;
+    content: "I'm a National Badminton Player.";
+  }
+
+  63%{
+    width:27ch;
+  }
+
+  70%{
+    width:4ch;
+  }
+
+  73%{
+    width:4ch;
+    
+  }
+  81%{
+    content: "I'm a Python Developer.";
+  }
+
+  84%{
+    width:20ch;
+   
+  }
+
+  89%{
+    width:20ch;
+  }
+
+  95%{
+    width:0ch;
+  }
+
+  100%{
+    content: "I'm a Python Developer.";
+    width:0ch;
+    
+  }
 
 }
-
 
 @keyframes head {
   0%  { transform: translateX(0px); }
