--- a/styles/projects.css
+++ b/styles/projects.css
@@ -161,7 +161,10 @@
     background:url(../Images/galaxy.jpeg);
 }
 
-@media only screen and (max-width: 600px) {
+
+
+
+@media  (max-width: 600px) {
 
   #heading_card{
     font-size:20px;
@@ -204,37 +207,7 @@
             font-size:14px;
         }
 
-        @keyframes heady {
-        0%{
-            width:0ch;
-
-        }
-
-        50%{
-            width:20ch;
-        }
-
-        85%{ width:0ch;}
-
-        100%{
-            width:0ch;
-        }
 
     
-        
-        }
-        .aboutme ::before{
-            color:white;
-            content: "I'm a Web Developer.";
-            display: inline-block;
-            animation:heady 7s steps(20);
-            overflow:hidden;
-            white-space:nowrap;
-            border-right: 4px solid black;
-            width: 20ch;
-            font-size:25px;
-            animation-iteration-count: infinite;
-        
-        }
         
 }
