--- a/styles/style.css
+++ b/styles/style.css
@@ -287,6 +287,21 @@ nav ul li{
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  
+    .aboutme ::before{
+        color:white;
+        content: "I'm a Web Developer.";
+        display: inline-block;
+        animation:heady 7s steps(20);
+        overflow:hidden;
+        white-space:nowrap;
+        border-right: 4px solid black;
+        width: 20ch;
+        font-size:25px;
+        animation-iteration-count: infinite;
+    
+    }
+    
     
 }
 
@@ -296,21 +311,22 @@ nav ul li{
         display:none;
     }
 
+  
     
     
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (max-width: 992px) {
+@media (max-width: 992px) {
+   
+   
     .ayush{
         display:none;
     }
     .social-media{
         display:none;
     }
-    /* .about-pictures>img {
-       
-    } */
+
     .logo{
         display:none;
     }
@@ -323,14 +339,32 @@ nav ul li{
     .navbar-container{
         justify-content:center;
     }
-    
+   
+   
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1000px) {
     
     .arrow-down{display:none;}
+
+    .aboutme ::before{
+        color:white;
+        content: "I'm a Web Developer!";
+        display: inline-block;
+        font-size:30px;
+        animation-name: head;
+        animation-duration:16s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        z-index:0;
+    
+    }
 }
+
+
+
+ /* scroll bar */
 
     ::-webkit-scrollbar {
         width: 12px;
