--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/annimations.css">
     <link rel="stylesheet" href="../styles/projects.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" 
+      type="image/png" img src="../Images/fevicon.png">
     <script src="https://use.fontawesome.com/9c02f0a892.js"></script>
     <script src="https://kit.fontawesome.com/e9c1d6f30e.js" crossorigin="anonymous"></script>
     </head>
